--- a/pagetwo.html
+++ b/pagetwo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Case Project</title>
-    <link rel="stylesheet" href="style.css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;600;900&display=swap" rel="stylesheet">
 </head>
