--- a/pagefour.html
+++ b/pagefour.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html>
+<html lang="">
 
-    <head>
-        <meta charset="utf-8">
-        <title>Case Project</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;600;900&display=swap" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <title>Case Project</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;600;900&display=swap" rel="stylesheet">
+    <script src="script/modernizr.custom.05819.js"></script>
+</head>
 
 <body>
 
