--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <h1>Liverpool Hat</h1>
             <img src="images/EPL-RGW04GWS-BKC-HR-F.jpg" alt="">
             <p>Price: 25.00$</p>
+            <p>Shipping: 10.00$</p>
+            <p>Sales Tax: 1.75$</p>
             <input type="number" id="num"/>
             <button class="add" id="button" onclick="showTotal()">
               See Price with Tax and Shipping
