--- a/pagefour.html
+++ b/pagefour.html
@@ -13,7 +13,13 @@
 <body>
 
     <section class="header">
-        <h1>Liverpool Fan Site</h1>
+        <script>
+            document.write(
+                "<h1>Liverpool Fan Site</h1>") //This writes the 
+        </script>
+        <script>
+            document.write(Date()); //This inputs the date
+        </script>
         <h3>A Site for Liverpool fans</h3>
         <h3>Page Four</h3>
     </section>
@@ -23,8 +29,8 @@
     <nav class="navigation">
         <ul>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="pagetwo.html">PLAYERS</a></li>
-            <li><a href="pagethree.html">STATES</a></li>
+            <li><a href="pagetwo.html">SHOP</a></li>
+            <li><a href="pagethree.html">STATS</a></li>
             <li><a href="pagefour.html">PAGE FOUR</a></li>
         </ul>
     </nav>
