--- a/pagethree.html
+++ b/pagethree.html
@@ -1,14 +1,15 @@
-<!doctype html>
-<html lang="">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <title>Case Project</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="reconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;600;900&display=swap" rel="stylesheet">
     <script src="script/modernizr.custom.05819.js"></script>
 </head>
+
+
 
 <body>
 
@@ -21,22 +22,22 @@
             document.write(Date()); //This inputs the date
         </script>
         <h3>A Site for Liverpool fans</h3>
-        <h3>Page Three</h3>
+        <h3>stats</h3>
     </section>
 
-<div class="content">
+    <div class="content">
 
-    <nav class="navigation">
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="pagetwo.html">SHOP</a></li>
-            <li><a href="pagethree.html">STATS</a></li>
-            <li><a href="pagefour.html">PAGE FOUR</a></li>
-        </ul>
-    </nav>
+        <nav class="navigation">
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="pagetwo.html">SHOP</a></li>
+                <li><a href="pagethree.html">STATS</a></li>
+                <li><a href="pagefour.html">PAGE FOUR</a></li>
+				<li><a href="pagefive.html">cyber security page</a></li>
+            </ul>
+        </nav>
 
 <br><br><br>
-
 <div class="stats">
 <h3>Goals scored by liverpool players in the 2020-2021 Premier League so far.</h3>
 
