--- a/pagetwo.html
+++ b/pagetwo.html
@@ -1,14 +1,15 @@
-<!doctype html>
-<html lang="">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <title>Case Project</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="reconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;600;900&display=swap" rel="stylesheet">
     <script src="script/modernizr.custom.05819.js"></script>
 </head>
+
+
 
 <body>
 
@@ -21,7 +22,7 @@
             document.write(Date()); //This inputs the date
         </script>
         <h3>A Site for Liverpool fans</h3>
-        <h3>Shop</h3>
+        <h3>shop</h3>
     </section>
 
     <div class="content">
@@ -32,10 +33,11 @@
                 <li><a href="pagetwo.html">SHOP</a></li>
                 <li><a href="pagethree.html">STATS</a></li>
                 <li><a href="pagefour.html">PAGE FOUR</a></li>
+                <li><a href="pagefive.html">cyber security page</a></li>
             </ul>
         </nav>
 
-<br><br><br>
+        <br><br><br>
 
         <div class="shop">
             <h1>Liverpool Hat</h1>
@@ -50,8 +52,8 @@
             <p id="value"></p>
         </div>
 
-
         <script>
+            //script fot hat number
             var data = { // logging input value 
                 qty: "",
                 total: "",
