--- a/pagefour.html
+++ b/pagefour.html
@@ -22,7 +22,7 @@
             document.write(Date()); //This inputs the date
         </script>
         <h3>A Site for Liverpool fans</h3>
-        <h3>page four</h3>
+        <h3>Home Page</h3>
     </section>
 
     <div class="content">
@@ -33,45 +33,59 @@
                 <li><a href="pagetwo.html">SHOP</a></li>
                 <li><a href="pagethree.html">STATS</a></li>
                 <li><a href="pagefour.html">PAGE FOUR</a></li>
-				<li><a href="pagefive.html">cyber security page</a></li>
+                <li><a href="pagefive.html">cyber security page</a></li>
             </ul>
         </nav>
 
-<br><br><br>
+        <br><br><br>
+
+            <form name="form" action="/action_page.php" onsubmit="return validateForm()" method="post">
+              <h2>Enter your E-Mail for your chance to win!</h2> <br>
+              <input type="checkbox" name="checkbox"> I understand I might get emails. <br><br>
+
+              <input type="text" name="name" value=""> name<br><br>
+              <input type="text" name="email" value=""> email<br><br>
+              <input type="text" name="player" value=""> favorite player <br><br>
+              <legend>Color</legend>
+              <input type="radio" name="color" id="crlBlack" value="black" />
+              <label for="thin">Black</label>
+              <br><br>
+              <input type="submit" value="Submit">
+            </form>
 
 <script>
-    //this is some script that I achually got to work if you leave a input blank under the statement that says "enter your e-mail for you chance to win" then you will be hit with an error message that will only let you "submit" when you have the form completed. however I was unable to get it to work using the try, catch, finally meathod. I ran into a couple different problems with this because I wasent getting the error to pop up but I used the console.log in the console window in chrome to see what the problem was. Got a syntax for simple mistakes that were easy to find with a close second look.
-    function validateForm() {
-      var asdf = document.forms["form"]["name"].value;
-      if (asdf == "") {
-        alert("Name must be filled out");
-        return false;
-      }
-      var asdf = document.forms["form"]["email"].value;
-      if (asdf == "") {
-        alert("E-mail must be filled out");
-        return false;
-      }
-      var asdf = document.forms["form"]["player"].value;
-      if (asdf == "") {
-        alert("Favorite player must be filled out");
-        return false;
-      }
-    }
-    </script>
-  
-      <form name="form" action="/action_page.php" onsubmit="return validateForm()" method="post">
-        <h2>Enter your E-Mail for your chance to win!</h2> <br>
-        <input type="text" name="name" value=""> name<br><br>
-        <input type="text" name="email" value=""> email<br><br>
-        <input type="text" name="player" value=""> favorite player <br><br>
-        <input type="submit" value="Submit">
-      </form>
+        function validateForm() { // validates check
+            var crackers = document.forms["form"]["checkbox"].checked;
+            if (crackers == "") {
+              alert("Must check box");
+              return false;
+            }  
+            var crackers = document.forms["form"]["name"].value; //validates name
+            if (crackers == "") {
+              alert("Name must be filled out");
+              return false;
+            }
+            var crackers = document.forms["form"]["email"].value; //validates email
+            if (crackers == "") {
+              alert("E-mail must be filled out");
+              return false;
+            }
+            var crackers = document.forms["form"]["player"].value; //validates play you like
+            if (crackers == "") {
+              alert("Favorite player must be filled out");
+              return false;
+            }
+            var crackers = document.getElementsByTagName("color").value === false; //validated color selected
+            if (crackers == "") {
+              alert("Must select Color");
+              return false;
+            }
+          }
+          </script>
 
-</div>
+
+    </div> <!-- end of content -->
 
 </body>
-
-
 
 </html>
